# forge

./: CHANGELOG.md  README.md  pyproject.toml
docs/: compatibility-matrix.json  release-checklist.md  release-notes-template.md
scripts/: compat_matrix.py  smoke.sh
src/forge/: __init__.py  cli.py  config.py  envs.py  fingerprint.py  gc.py  linker.py  metadata.py  models.py  pip_shim.py  resolver.py  runtime.py
tests/: test_cli.py  test_gc.py  test_resolver.py  test_store_reuse.py
