[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "forge-runtime"
version = "0.1.0"
description = "Forge: layered dependency runtime for Python"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Forge Team" }]
dependencies = []

[project.scripts]
forge = "forge.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
